# sfsu

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  build.rs  deny.toml  generate-release.ps1  justfile  output  renovate.json  rust-toolchain.toml  scoop-schema.json  sfsu.code-workspace  sfsu.exe.manifest
.cargo-husky/hooks/: pre-push
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: build.yml  docs.yml  release.yml  rust.yml  scan.yml  setup.yml
benches/: autoupdate.rs  commands.ps1  ref-matching.rs  searching.rs  serde.rs
book/: book.toml
book/src/ch1/: 01.md
book/src/ch2/: hook.md  list.md
comparison/: README.md  hash_for_keepass.ps1  strip_fname.ps1
crates/derive/: Cargo.toml
crates/derive/src/: generate_colour_macros.rs  hooks.rs  inner.rs  keyvalue.rs  lib.rs
crates/derive/tests/: into_inner.rs  raw_enum.rs
crates/hash/: Cargo.toml
crates/hash/examples/: find_hash.rs
crates/hash/src/: formats.rs  lib.rs  ops.rs
crates/hash/src/formats/: rdf.rs  text.rs
crates/manifest-hash/: Cargo.toml
crates/manifest-hash/src/: formats.rs  lib.rs  requests.rs
crates/manifest-hash/src/formats/: json.rs  rdf.rs  text.rs
crates/sprinkles/: Cargo.toml  README.md  build.rs
crates/sprinkles/src/: buckets.rs  cache.rs  calm_panic.rs  config.rs  contexts.rs  diagnostics.rs  env.rs  git.rs  hacks.rs  handles.rs  hash.rs  lib.rs  opt.rs  output.rs  packages.rs  progress.rs  proxy.rs  requests.rs  scripts.rs  shell.rs  stream.rs  version.rs  virustotal.rs  wrappers.rs
crates/sprinkles/src/config/: aria2.rs  branch.rs  defaults.rs  isolated.rs  repo.rs  shim.rs  skips.rs
crates/sprinkles/src/contexts/: global.rs  user.rs
crates/sprinkles/src/git/: clone.rs  errors.rs  options.rs  parity.rs  pull.rs
crates/sprinkles/src/git/options/: fetch.rs
crates/sprinkles/src/hacks/: inline_const.rs  let_chains.rs
crates/sprinkles/src/hash/: formats.rs  hash_serde.rs  ops.rs  substitutions.rs  url.rs  url_ext.rs
crates/sprinkles/src/hash/formats/: json.rs  rdf.rs  text.rs  xml.rs
crates/sprinkles/src/output/: colours.rs  sectioned.rs  structured.rs  wrappers.rs
crates/sprinkles/src/output/structured/: vertical.rs
crates/sprinkles/src/output/wrappers/: alias_vec.rs  author.rs  bool.rs  cap_str.rs  header.rs  keys.rs  sizes.rs  time.rs
crates/sprinkles/src/progress/: gitoxide.rs
crates/sprinkles/src/virustotal/models/: scan.rs
crates/sprinkles/src/win/: version.c  version.rs
crates/sprinkles/src/wrappers/: author.rs  cap_str.rs  keys.rs  time.rs
crates/sprinkles/tests/: hashes.rs  parse_manifests.rs  versions.rs
docs/: .gitignore  book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
docs/book/ch1/: 01.html  index.html
docs/book/ch2/: describe.html  hook.html  index.html  list.html  search.html  unused-buckets.html
docs/src/: INTRODUCTION.md  SUMMARY.md
docs/src/ch1/: 01.md
docs/src/ch2/: describe.md  hook.md  index.md  list.md  search.md  unused-buckets.md  unusedbuckets.md
examples/: latest_commit.rs  outdated_repo.rs
hooks/: nix.sh
macros/: Cargo.toml
macros/src/: hooks.rs  inner.rs  keyvalue.rs  lib.rs
macros/tests/: into_inner.rs  raw_enum.rs
scripts/: hash.py
sfsu-derive/: Cargo.toml
sfsu-derive/src/: deprecateable.rs  hooks.rs  inner.rs  keyvalue.rs  lib.rs
sfsu-derive/tests/: helpers.rs  into_inner.rs  raw_enum.rs
shim/: Cargo.toml
shim/src/: main.rs
sprinkles/: Cargo.toml
sprinkles/src/: lib.rs  packages.rs
src/: buckets.rs  cache.rs  calm_panic.rs  commands.rs  config.rs  diagnostics.rs  errors.rs  files.rs  git.rs  lib.rs  limits.rs  logging.rs  main.rs  models.rs  opt.rs  output.rs  packages.rs  pkginfo.rs  progress.rs  requests.rs  search.rs  summary.rs  update.rs  virustotal.rs  wrappers.rs
src/buckets/: git.rs  update_repo.rs
src/buckets/git/: pull.rs
src/commands/: app.rs  backup.rs  bucket.rs  buckets.rs  cache.rs  cat.rs  checkup.rs  cleanup.rs  command.rs.template  credits.rs  debug.rs  depends.rs  describe.rs  doctor.rs  download.rs  export.rs  home.rs  hook.rs  info.rs  list.rs  manage_config.rs  outdated.rs  purge.rs  search.rs  status.rs  uninstall.rs  unused.rs  update.rs  virustotal.rs
src/commands/app/: cat.rs  cleanup.rs  download.rs  home.rs  info.rs  list.rs  outdated.rs  purge.rs  uninstall.rs
src/commands/bucket/: add.rs  known.rs  list.rs  outdated.rs  remove.rs  rm.rs  unused.rs  update.rs
src/commands/cache/: list.rs  remove.rs  rm.rs  show.rs
src/commands/debug/: save.rs  sizes.rs
src/commands/manage_config/: get.rs  remove.rs  set.rs
src/commands/outdated/: apps.rs  buckets.rs
src/files/: sizes.rs
src/git/: pull.rs
src/logging/: mod.rs  panics.rs  threaded.rs
src/models/: export.rs  info.rs  min.rs  outdated.rs  status.rs
src/output/: colours.rs  consts.rs  sectioned.rs  structured.rs  truncate.rs  wrappers.rs
src/output/structured/: vertical.rs
src/output/wrappers/: alias_vec.rs  cap_str.rs  keys.rs  time.rs
src/summary/: bucket.rs  package.rs
src/wrappers/: author.rs  header.rs  serialize.rs  sizes.rs  time.rs
