[package]
description = "Stupid Fast Scoop Utils"
edition = "2021"
license = { workspace = true }
name = "sfsu"
publish = false
version = "1.14.0"

[workspace]
members = ["macros"]
package.authors = ["Juliette Cordor <professional@maybejules.com>"]
package.homepage = "https://github.com/winpax/sfsu"
package.license = "MIT OR Apache-2.0"
package.publish = false
package.repository = "https://github.com/winpax/sfsu"

[workspace.dependencies]
chrono = { version = "0.4", features = [
    "clock",
    "serde",
    "std",
], default-features = false }
console = { version = "0.15", features = ["windows-console-colors"] }
futures = "0.3"
git2 = "0.18"
heck = "0.5"
itertools = "0.13"
log = { version = "0.4", features = ["std"] }
quork = "0.7"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
sprinkles-rs = { version = "0.15", features = [
    "clap",
], git = "https://github.com/winpax/sprinkles" }

[[bench]]
harness = false
name = "searching"

[[bench]]
harness = false
name = "ref-matching"

[[bench]]
harness = false
name = "serde"

[[bench]]
harness = false
name = "autoupdate"

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "dev"
opt-level = 3

[features]
beta = ["sprinkles-rs/beta"]
contexts = []
default = ["download", "contexts"]
download = ["sprinkles-rs/manifest-hashes"]
# Changes that fundamentally change the API are locked behind this feature flag
v2 = ["sprinkles-rs/v1"]

[dependencies]
anyhow = "1.0"
bat = "0.24"
cfg-if = "1.0"
chrono.workspace = true
clap = { version = "4.5", features = [
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
console.workspace = true
crossterm = "0.27"
derive_more = "0.99.17"
dialoguer = "0.11"
futures.workspace = true
heck.workspace = true
human-panic = "2.0"
itertools.workspace = true
konst = "0.3.9"
log = { workspace = true }
open = "5.1"
parking_lot = "0.12"
quork.workspace = true
ratatui = { version = "0.26", features = ["macros"] }
rayon.workspace = true
regex.workspace = true
semver = "1.0"
serde.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
sfsu-macros = { path = "./macros" }
shadow-rs = "0.28"
sprinkles-rs.workspace = true
tokio = { version = "1.37", features = ["full"] }
vt3 = { git = "https://github.com/winpax/vt3.git", version = "0.8", package = "async_vt3" }
which = "6.0"
windows = { version = "0.56", features = ["Win32_Storage_FileSystem"] }
windows-version = "0.1"
winreg = "0.52"

[dev-dependencies]
chrono.workspace = true
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
git2 = { workspace = true }

[build-dependencies]
contribs = { git = "https://github.com/winpax/contribs.git", version = "0.1" }
dotenv = "0.15"
git2.workspace = true
shadow-rs = "0.28"
tokio = { version = "1.37", features = ["full"] }
toml_edit = "0.22"
winres = "0.1"
