[package]
edition = "2021"
license = { workspace = true }
name = "sfsu-macros"
publish.workspace = true
rust-version = "1.69.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro-crate = "3.1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
quork.workspace = true
sprinkles-rs.workspace = true
strum = { version = "0.26", features = ["derive"] }
