[package]
name = "sfsu-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.66"
quote = "1.0.30"
syn = { version = "2.0.26", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.72"
paste = "1.0.14"
strum = { version = "0.25.0", features = ["derive"] }
