[package]
edition = "2021"
name    = "hash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
regex     = "1.10.3"
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
