[package]
edition = "2021"
name    = "hash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
log = "0.4.21"
quick-xml = "0.31.0"
regex = "1.10.3"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
