[package]
edition = "2021"
name = "scoop-manifest-hash"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
itertools = "0.12"
log = "0.4"
quick-xml = "0.31"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0.115"
serde_json_path = "0.6.7"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
url = "2.5.0"
