[package]
edition = "2021"
license = { workspace = true }
name = "sprinkles"
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["info-difftrees", "manifest-hashes"]
info-difftrees = []
manifest-hashes = [
    "base64",
    "digest",
    "getset",
    "quick-xml",
    "serde_json_path",
    "sha1",
    "sha2",
    "sxd-document",
    "sxd-xpath",
    "tokio-util",
    "url",
    "urlencoding",
]
v2 = []

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22.0", optional = true }
bytes = "1.6.0"
cfg-if = "1.0"
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
derive_more = "0.99"
digest = { version = "0.10.7", features = ["std"], optional = true }
directories = "5.0"
dunce = "1.0"
futures.workspace = true
getset = { version = "0.1.2", optional = true }
git2.workspace = true
heck = "0.5"
indicatif.workspace = true
itertools.workspace = true
log.workspace = true
md-5 = "0.10.6"
owo-colors.workspace = true
quick-xml = { version = "0.31.0", optional = true, features = ["serialize"] }
quork = "0.6"
rayon.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "stream",
] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json_path = { version = "0.6.7", optional = true }
sfsu-derive = { path = "../derive" }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
strum = { version = "0.26", features = ["derive"] }
sxd-document = { version = "0.3.2", optional = true }
sxd-xpath = { version = "0.4.2", optional = true }
thiserror = "1.0"
tokio = { version = "1.37.0", features = [
    "fs",
    "macros",
    "parking_lot",
    "time",
] }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
url = { version = "2.5.0", features = ["serde"], optional = true }
urlencoding = { version = "2.1.3", optional = true }
which = "6.0"
windows = { version = "0.56", features = ["Win32_Storage_FileSystem"] }
windows-version = "0.1.1"
winreg = "0.52"
