[package]
authors.workspace = true
description = "A Rust based abstraction layer for Scoop"
edition = "2021"
homepage.workspace = true
license = { workspace = true }
name = "sprinkles"
publish.workspace = true
repository.workspace = true
rust-version = "1.75.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
beta = []
default = ["manifest-hashes"]
manifest-hashes = [
    "base64",
    "digest",
    "getset",
    "quick-xml",
    "serde_json_path",
    "sha1",
    "sha2",
    "sxd-document",
    "sxd-xpath",
    "tokio-util",
    "url",
    "urlencoding",
]
v2 = []

[dependencies]
base64 = { version = "0.22", optional = true }
blake3 = { version = "1.5", features = ["rayon"] }
bytes = "1.6"
cfg-if = "1.0"
chrono.workspace = true
clap = { version = "4.5", optional = true }
console.workspace = true
const_format = "0.2"
derive_more = "0.99"
digest = { version = "0.10", features = ["std"], optional = true }
directories = "5.0"
dunce = "1.0"
futures.workspace = true
getset = { version = "0.1", optional = true }
git2.workspace = true
gix = { version = "0.62.0", features = [
    "blocking-http-transport-reqwest",
    "blocking-network-client",
    "worktree-mutation",
] }
gix-object = "0.42.1"
indicatif = { version = "0.17", features = [
    "improved_unicode",
    "rayon",
    "tokio",
] }
itertools.workspace = true
log.workspace = true
md-5 = "0.10"
parking_lot = "0.12.2"
phf = { version = "0.11.2", default-features = false }
quick-xml = { version = "0.31", optional = true, features = ["serialize"] }
quork.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "stream",
] }
semver = { version = "1.0", features = ["serde"] }
serde.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json_path = { version = "0.6", optional = true }
serde_with = "3.8"
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
strum = { version = "0.26", features = ["derive"] }
sxd-document = { version = "0.3", optional = true }
sxd-xpath = { version = "0.4", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = [
    "fs",
    "macros",
    "parking_lot",
    "process",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
url = { version = "2.5", features = ["serde"], optional = true }
urlencoding = { version = "2.1", optional = true }
which = "6.0"
windows = { version = "0.56", features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }
windows-version = "0.1"
winreg = "0.52"

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
heck = "0.5"
phf_codegen = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
